--- a/web/index.html
+++ b/web/index.html
@@ -77,9 +77,10 @@
             <span class="text-muted">
                 <p>
                     MERU: Multi-console Emulator written in Rust
-                    &copy; 2022 tanakh
-                    <br>
+                    &nbsp;
                     <a href="https://github.com/tanakh/meru/">GitHub Repository</a>
+                    <br>
+                    &copy; 2022 tanakh
                 </p>
             </span>
         </div>
